force-app/main/default/objects/Sector_Detail__c/Sector_Detail__c.object-meta.xml
<CustomObject>
    <label>Sector Detail</label>
    <nameField>
        <label>Sector Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sector Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>