force-app/main/default/objects/Sector_Detail__c/fields/Sector_Master__c.field-meta.xml
<CustomField>
    <fullName>Sector_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sector Master</label>
    <referenceTo>Sector_Master__c</referenceTo>
    <relationshipLabel>Sector Details</relationshipLabel>
    <relationshipName>Sector_Details</relationshipName>
    <type>Lookup</type>
</CustomField>